# aquiladch

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.windows  TODO  aclocal.m4  config.h.in  configure  configure.ac
m4/: aquila.m4
po/: LINGUAS  Makevars  POTFILES.in  aquila.pot  aquilact.pot  fi_FI.gmo  fi_FI.po  fi_OP.gmo  fi_OP.po  hu_HU.gmo  hu_HU.po  nl.gmo  nl.po  pl.gmo  pl.po  sv.gmo  sv.po
src/: Makefile.am  Makefile.in  aqtime.c  aqtime.h  aquila.rc  banlist.c  banlist.h  banlistclient.c  banlistclient.h  banlistnick.c  banlistnick.h  buffer.c  buffer.h  builtincmd.c  builtincmd.h  cap.c  cap.h  commands.c  commands.h  config.c  config.h  core_config.c  core_config.h  czas.c  defaults.h  dllist.c  dllist.h  dns.c  dns.h  esocket.c  esocket.h  esocket_epoll.c  esocket_iocp.c  esocket_poll.c  esocket_select.c  etimer.c  etimer.h  flags.c  flags.h  getaddrinfo.c  (+63 more)
tools/: Makefile.am  Makefile.in  aqdtinstall.in  aqpasswd.c  ddch_import  verli_import  ynhub_import
